2012-08-22  Alexander V. Lukyanov <lav@yars.free.net>

	* network.cc: fixed set_compact for ipv6.
	* Torrent.cc, Torrent.h: limit udp send rate; check POLLOUT before
	  sending a udp packet; tune dht timers; improve logging;
	  save node id in sent requests; try to send find request to all nodes
	  if no good nodes found; fixed route bucket splitting.
	* ResMgr.cc, ResMgr.h: (NumberPair) new type; support number power
	  suffix in ranges and pairs.

2012-08-20  Alexander V. Lukyanov <lav@yars.free.net>

	* network.cc, network.h; make set_compact return bool.
	* Bencode.h: add lookup* methods.
	* Torrent.cc, Torrent.h: init ping_lost_count properly; make ValidNodeId
	  call MakeNodeId, move masks info MakeNodeId; fixed route table refreshing;
	  check address type before using; use new lookup methods.

2012-08-16  Alexander V. Lukyanov <lav@yars.free.net>

	* Torrent.cc: fixed ut_metadata total_size.
	* xmap.cc, xmap.h: (each_finished, exists) new methods.
	* network.cc, network.h: (set_compact(const char*,size_t)) new method.
	* Torrent.cc, Torrent.h: added ut_pex extension; remember if the torrent
	  is private; remember is a peer is upload_only; (Seed) new method;
	  set tracker error only if last URL failed; disallow huge packets.
	* network.cc, network.h: (is_compatible) new method.

2012-08-16  Alexander V. Lukyanov <lav@yars.free.net>

	* network.cc: fixed typo.
	* xstring.cc, xstring.h: (begins_with, instr, hexdump_to) new methods;
	  improved dump() for invalid utf8 strings.
	* xarray.h: (xqueue_p) new class.
	* Torrent.cc, Torrent.h: added timeout for tracker requests;
	  added support for tracker groups; new option --dht-bootstrap
	  for manual bootstrapping.
	* ftp-opie.c: use newer version from wget (fixes a bug on 64-bit hw).
	* xstring.cc, xstring.h: (hex_decode) new method.
	* Torrent.cc, Torrent.h: use hex_decode; allow pure hash instead of
	  magnet links; make tracker Fail if no valid URLs found.
